[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tablefaker"
version = "1.0.0"
authors = [
  { name="Necati Arslan", email="necatia@gmail.com" },
]
description = "Generate fake data in pandas, pyarrow, csv, json, excel format for a given schema in a yaml file."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.00"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/necatiarslan/table-faker"
"Bug Tracker" = "https://github.com/necatiarslan/table-faker/issues"